2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/effects/videorate (svn:ignore):
	* flumotion/component/effects/deinterlace (svn:ignore):
	* flumotion/component/converters/video (svn:ignore):
	* flumotion/component/effects/videoscale (svn:ignore):
	Add missing files to svn:ignore

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/effects/videorate/videorate.py:
	Use 2 parameters in gst.Fraction to be compatible with older versions

2010-07-02  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc-Andre Lureau

	* flumotion/admin/gtk/overlaystep.py:
	* flumotion/component/converters/overlay/overlay.py:
	* flumotion/component/converters/overlay/overlay.xml:
	overlay: add suport for dynamic changes using the input stream
	caps.

	Former overlay component needs to know beforehand both the
	width and height of the imput stream to generate the image to
	overlay. The new implementation uses the caps of the input stream
	and generates a new image on each change, pushing buffer at the
	input framerate.

	admin: don't set width and height in the overlay component,
	it's now deprecated.
	Closes #1441

2010-07-02  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc-Andre Lureau

	* flumotion/component/producers/firewire/firewire.py:
	Check properties in class method check_properites()

2010-07-02  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc-Andre Lureau

	* configure.ac:
	* flumotion/component/converters/Makefile.am:
	* flumotion/component/converters/video/Makefile.am (added):
	* flumotion/component/converters/video/__init__.py (added):
	* flumotion/component/converters/video/video.py (added):
	* flumotion/component/converters/video/video.xml (added):
	Add video-converter element.
	Closes #1440

2010-07-02  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc-Andre Lureau
